Sun Nov  2 12:17:56 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 - drivers/safenet.c: Improve debugging of the serial communication.

Sun Nov  2 12:14:06 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 - docs/new-drivers.txt, drivers/serial.[ch]: The return code of the
   ser_get_*() functions is now 0 on timeouts. This allows drivers to tell
   the difference between an error that occurred reading from the serial
   port and timeouts while reading from the UPS. The ser_send() and
   ser_send_pace() functions return -1 on errors, so the return value
   should be signed, not unsigned.
 - drivers/megatec_usb.c: Return code for ser_send_pace() is signed.

Mon Oct 20 11:31:14 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 - drivers/megatec.c, man/megatec.8: Adds a "battvoltmult" parameter to the
   megatec driver (based on a patch from Carlos Rodrigues)

Sun Oct 19 09:59:06 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 - drivers/tripplite-hid.c, scripts/hal/ups-nut-device.fdi,
   scripts/hotplug/libhid.usermap, scripts/udev/nut-usbups.rules.in: Add
   an additional productid for Tripp-Lite SMART2200RXML2U.

Sat Oct 18 17:15:20 UTC 2008 / Kjell Claesson <kjell.claesson@epost.tidanet.se>

  - data/driver.list: Add the Delta GES602N. Reported working by Jerome Benoit.

Tue Oct 14 14:00:00 UTC 2008 / Arnaud Quette <ArnaudQuette@Eaton.com>

 - driver.list: add the full Eaton range (addressing MGE Office Protection
   Systems), and the Protection Station from MGE Office Protection Systems.

Fri Oct 10 20:43:32 UTC 2008 / Arnaud Quette <aquette.dev@gmail.com>

 - data/driver.list, drivers/tripplite-hid.c, scripts/hal/ups-nut-device.fdi
   scripts/hotplug/libhid.usermap, scripts/udev/nut-usbups.rules.in: add 
   support for Tripp-Lite AVR750U (patch provided by Raphael Geissert)
 - data/driver.list: add support for HP PowerTrust 2997A

Fri Sep 26 00:24:26 UTC 2008 / Alexander I. Gordeev <lasaine@lvk.cs.msu.su>

 - data/driver.list: added several UPS models.