@@ -28,12 +28,12 @@
 #define SER_WAIT_SEC	0
 #define SER_WAIT_USEC	250000
 
-#define DRV_VERSION "0.23"
+#define DRV_VERSION "0.24"
 
 typedef struct {
 	char	*version;
 	int	(*initups)(void);
 	void	(*initinfo)(void);
-	void	(*updateinfo)(void);
+	int	(*updateinfo)(void);
 	void	(*shutdown)(void);
 } subdriver_t;
